fix(): Wrapping words on mobile (#296)

--- a/src/_sass/components/_markdown.scss
+++ b/src/_sass/components/_markdown.scss
@@ -196,6 +196,11 @@
       color: color(secondary-dark);
       vertical-align: top;
       line-height: 26px;
+      word-wrap: break-word;
+
+      @include breakpoint(medium up) {
+        word-wrap: normal;
+      }
     }
 
     thead {
